--- a/poke_bowl_api/composer.json
+++ b/poke_bowl_api/composer.json
@@ -81,6 +81,8 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.52"
+        "symfony/maker-bundle": "^1.52",
+        "symfony/stopwatch": "6.3.*",
+        "symfony/web-profiler-bundle": "6.3.*"
     }
 }
