Mise en place des delete Recette/Ingredient et appel en fonction du rôle utilisateur

--- a/poke_bowl_api/config/services.yaml
+++ b/poke_bowl_api/config/services.yaml
@@ -6,6 +6,11 @@
 parameters:
 
 services:
+    app.state_processor:
+        class: App\Processor\IngredientProcessor
+        arguments:
+            - '@doctrine.orm.entity_manager'
+            - '@App\Repository\IngredientRecetteRepository'
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
